BPER/DEVF/force-app/main/default/objects/Numeri_Tecnici__mdt/Numeri_Tecnici__mdt.object-meta.xml
<CustomObject>
    <label>Numeri Tecnici</label>
    <pluralLabel>Numeri Tecnici</pluralLabel>
</CustomObject>