BPER/DEVF/force-app/main/default/objects/Numeri_Tecnici__mdt/fields/Competenza__c.field-meta.xml
<CustomField>
    <fullName>Competenza__c</fullName>
    <label>Competenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>