BPER/DEVF/force-app/main/default/objects/Numeri_Tecnici__mdt/fields/Data_max__c.field-meta.xml
<CustomField>
    <fullName>Data_max__c</fullName>
    <label>Data max</label>
    <type>Date</type>
</CustomField>