BPER/DEVF/force-app/main/default/objects/Numeri_Tecnici__mdt/fields/Data_min__c.field-meta.xml
<CustomField>
    <fullName>Data_min__c</fullName>
    <label>Data min</label>
    <type>Date</type>
</CustomField>