BPER/DEVF/force-app/main/default/objects/Numeri_Tecnici__mdt/fields/Valori__c.field-meta.xml
<CustomField>
    <fullName>Valori__c</fullName>
    <label>Valori</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>